Add repeated alerts
